--- a/ui/MainWindow.glade
+++ b/ui/MainWindow.glade
@@ -1,28 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.36.0 -->
+<!-- Generated with glade 3.22.2 -->
 <interface>
   <requires lib="gtk+" version="3.18"/>
   <template class="MainWindow" parent="GtkWindow">
     <property name="can_focus">False</property>
     <property name="default_width">800</property>
     <property name="default_height">600</property>
+    <child type="titlebar">
+      <object class="GtkHeaderBar" id="header_bar">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <property name="title" translatable="yes">Repose</property>
+        <property name="show_close_button">True</property>
+        <child>
+          <object class="GtkButton" id="new_request_button">
+            <property name="label">gtk-add</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+            <property name="use_stock">True</property>
+            <property name="always_show_image">True</property>
+          </object>
+        </child>
+      </object>
+    </child>
     <child>
       <object class="GtkPaned" id="request_pane">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
+        <property name="wide_handle">True</property>
         <child>
           <object class="GtkListBox" id="request_list">
-            <property name="width_request">200</property>
+            <property name="width_request">100</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
           </object>
           <packing>
-            <property name="resize">False</property>
+            <property name="resize">True</property>
             <property name="shrink">False</property>
           </packing>
         </child>
         <child>
           <object class="GtkBox" id="active_requests_notebook_box">
+            <property name="width_request">400</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
@@ -62,27 +82,9 @@
             </child>
           </object>
           <packing>
-            <property name="resize">False</property>
+            <property name="resize">True</property>
             <property name="shrink">False</property>
           </packing>
-        </child>
-      </object>
-    </child>
-    <child type="titlebar">
-      <object class="GtkHeaderBar" id="header_bar">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="title" translatable="yes">Repose</property>
-        <property name="show_close_button">True</property>
-        <child>
-          <object class="GtkButton" id="new_request_button">
-            <property name="label">gtk-add</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-            <property name="use_stock">True</property>
-            <property name="always_show_image">True</property>
-          </object>
         </child>
       </object>
     </child>
