--- a/ui/ResponseContainer.glade
+++ b/ui/ResponseContainer.glade
@@ -3,6 +3,34 @@
 <interface>
   <requires lib="gtk+" version="3.22"/>
   <requires lib="gtksourceview" version="4.0"/>
+  <object class="GtkPopoverMenu" id="response_menu_popover">
+    <property name="can_focus">False</property>
+    <child>
+      <object class="GtkListBox">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <child>
+          <object class="GtkListBoxRow">
+            <property name="width_request">100</property>
+            <property name="height_request">80</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <child>
+              <object class="GtkAccelLabel" id="response_menu_toggle_filter">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Filter Response</property>
+              </object>
+            </child>
+          </object>
+        </child>
+      </object>
+      <packing>
+        <property name="submenu">submenu0</property>
+        <property name="position">1</property>
+      </packing>
+    </child>
+  </object>
   <template class="ResponseContainer" parent="GtkOverlay">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -94,7 +122,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <child>
-                      <object class="GtkSourceView" id="response_text">
+                      <object class="GtkSourceView" id="response_text_pretty">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="editable">False</property>
@@ -289,32 +317,4 @@
       </packing>
     </child>
   </template>
-  <object class="GtkPopoverMenu" id="response_menu_popover">
-    <property name="can_focus">False</property>
-    <child>
-      <object class="GtkListBox">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <child>
-          <object class="GtkListBoxRow">
-            <property name="width_request">100</property>
-            <property name="height_request">80</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <child>
-              <object class="GtkAccelLabel" id="response_menu_toggle_filter">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Filter Response</property>
-              </object>
-            </child>
-          </object>
-        </child>
-      </object>
-      <packing>
-        <property name="submenu">submenu0</property>
-        <property name="position">1</property>
-      </packing>
-    </child>
-  </object>
 </interface>
