--- a/ui/RequestContainer.glade
+++ b/ui/RequestContainer.glade
@@ -1,8 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.36.0 -->
+<!-- Generated with glade 3.22.2 -->
 <interface>
   <requires lib="gtk+" version="3.22"/>
   <requires lib="gtksourceview" version="4.0"/>
+  <object class="GtkListStore" id="requestTypePopoverStore">
+    <columns>
+      <!-- column-name type -->
+      <column type="gchararray"/>
+      <!-- column-name id -->
+      <column type="gchararray"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0" translatable="yes">Text</col>
+        <col id="1" translatable="yes">text</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Text (text/plain)</col>
+        <col id="1" translatable="yes">text-plain</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">JSON (application/json)</col>
+        <col id="1" translatable="yes">json</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Javascript (application/javascript)</col>
+        <col id="1" translatable="yes">js</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">XML (application/xml)</col>
+        <col id="1" translatable="yes">xml-application</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">XML (text/xml)</col>
+        <col id="1" translatable="yes">xml-text</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">HTML (text/html)</col>
+        <col id="1" translatable="yes">html</col>
+      </row>
+    </data>
+  </object>
+  <object class="GtkPopover" id="requestTypePopover">
+    <property name="can_focus">False</property>
+    <child>
+      <object class="GtkTreeView" id="requestTypePopoverTreeView">
+        <property name="visible">True</property>
+        <property name="can_focus">True</property>
+        <property name="model">requestTypePopoverStore</property>
+        <property name="headers_visible">False</property>
+        <property name="search_column">0</property>
+        <property name="activate_on_single_click">True</property>
+        <child internal-child="selection">
+          <object class="GtkTreeSelection"/>
+        </child>
+        <child>
+          <object class="GtkTreeViewColumn">
+            <property name="title" translatable="yes">column</property>
+            <child>
+              <object class="GtkCellRendererText"/>
+              <attributes>
+                <attribute name="text">0</attribute>
+              </attributes>
+            </child>
+          </object>
+        </child>
+      </object>
+    </child>
+  </object>
   <object class="GtkNotebook" id="requestNotebook">
     <property name="visible">True</property>
     <property name="can_focus">True</property>
@@ -23,6 +88,7 @@
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="tab_pos">bottom</property>
+        <property name="show_border">False</property>
         <child>
           <object class="GtkLabel">
             <property name="visible">True</property>
@@ -187,70 +253,5 @@
         <property name="tab_fill">False</property>
       </packing>
     </child>
-  </object>
-  <object class="GtkPopover" id="requestTypePopover">
-    <property name="can_focus">False</property>
-    <child>
-      <object class="GtkTreeView" id="requestTypePopoverTreeView">
-        <property name="visible">True</property>
-        <property name="can_focus">True</property>
-        <property name="model">requestTypePopoverStore</property>
-        <property name="headers_visible">False</property>
-        <property name="search_column">0</property>
-        <property name="activate_on_single_click">True</property>
-        <child internal-child="selection">
-          <object class="GtkTreeSelection"/>
-        </child>
-        <child>
-          <object class="GtkTreeViewColumn">
-            <property name="title" translatable="yes">column</property>
-            <child>
-              <object class="GtkCellRendererText"/>
-              <attributes>
-                <attribute name="text">0</attribute>
-              </attributes>
-            </child>
-          </object>
-        </child>
-      </object>
-    </child>
-  </object>
-  <object class="GtkListStore" id="requestTypePopoverStore">
-    <columns>
-      <!-- column-name type -->
-      <column type="gchararray"/>
-      <!-- column-name id -->
-      <column type="gchararray"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0" translatable="yes">Text</col>
-        <col id="1" translatable="yes">text</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">Text (text/plain)</col>
-        <col id="1" translatable="yes">text-plain</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">JSON (application/json)</col>
-        <col id="1" translatable="yes">json</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">Javascript (application/javascript)</col>
-        <col id="1" translatable="yes">js</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">XML (application/xml)</col>
-        <col id="1" translatable="yes">xml-application</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">XML (text/xml)</col>
-        <col id="1" translatable="yes">xml-text</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">HTML (text/html)</col>
-        <col id="1" translatable="yes">html</col>
-      </row>
-    </data>
   </object>
 </interface>
