--- a/ui/ResponseContainer.glade
+++ b/ui/ResponseContainer.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.36.0 -->
+<!-- Generated with glade 3.22.2 -->
 <interface>
   <requires lib="gtk+" version="3.22"/>
   <requires lib="gtksourceview" version="4.0"/>
@@ -27,6 +27,7 @@
       </object>
       <packing>
         <property name="submenu">submenu0</property>
+        <property name="position">1</property>
       </packing>
     </child>
   </object>
@@ -98,7 +99,6 @@
               <object class="GtkScrolledWindow">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="shadow_type">in</property>
                 <child>
                   <object class="GtkTextView" id="response_headers_text">
                     <property name="visible">True</property>
@@ -130,6 +130,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="tab_pos">bottom</property>
+                <property name="show_border">False</property>
                 <child>
                   <object class="GtkBox">
                     <property name="visible">True</property>
@@ -162,7 +163,6 @@
                       <object class="GtkScrolledWindow">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="shadow_type">in</property>
                         <child>
                           <object class="GtkSourceView" id="response_text">
                             <property name="visible">True</property>
@@ -203,7 +203,6 @@
                   <object class="GtkScrolledWindow">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="shadow_type">in</property>
                     <child>
                       <object class="GtkTextView" id="response_text_raw">
                         <property name="visible">True</property>
@@ -234,7 +233,6 @@
                   <object class="GtkScrolledWindow" id="response_webview_scroll_window">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="shadow_type">in</property>
                   </object>
                   <packing>
                     <property name="position">2</property>
