--- a/ui/RequestContainer.glade
+++ b/ui/RequestContainer.glade
@@ -3,7 +3,7 @@
 <interface>
   <requires lib="gtk+" version="3.22"/>
   <requires lib="gtksourceview" version="4.0"/>
-  <object class="GtkListStore" id="requestTypePopoverStore">
+  <object class="GtkListStore" id="content_type_popover_store">
     <columns>
       <!-- column-name type -->
       <column type="gchararray"/>
@@ -37,13 +37,13 @@
       </row>
     </data>
   </object>
-  <object class="GtkPopover" id="requestTypePopover">
+  <object class="GtkPopover" id="content_type_popover">
     <property name="can_focus">False</property>
     <child>
-      <object class="GtkTreeView" id="requestTypePopoverTreeView">
+      <object class="GtkTreeView" id="content_type_popover_tree_view">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
-        <property name="model">requestTypePopoverStore</property>
+        <property name="model">content_type_popover_store</property>
         <property name="headers_visible">False</property>
         <property name="search_column">0</property>
         <property name="activate_on_single_click">True</property>
@@ -64,128 +64,87 @@
       </object>
     </child>
   </object>
-  <object class="GtkNotebook" id="requestNotebook">
+  <template class="RequestContainer" parent="GtkOverlay">
     <property name="visible">True</property>
-    <property name="can_focus">True</property>
+    <property name="can_focus">False</property>
     <child>
       <placeholder/>
     </child>
-    <child type="tab">
-      <placeholder/>
-    </child>
-    <child>
-      <placeholder/>
-    </child>
-    <child type="tab">
-      <placeholder/>
-    </child>
-    <child>
-      <object class="GtkNotebook" id="requestTypeNotebook">
+    <child type="overlay">
+      <object class="GtkNotebook" id="request_notebook">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
-        <property name="tab_pos">bottom</property>
         <property name="show_border">False</property>
+        <property name="scrollable">True</property>
         <child>
-          <object class="GtkLabel">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="label" translatable="yes">No request body.</property>
-          </object>
+          <placeholder/>
         </child>
         <child type="tab">
-          <object class="GtkLabel">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="label" translatable="yes">None</property>
-          </object>
-          <packing>
-            <property name="tab_fill">False</property>
-          </packing>
+          <placeholder/>
         </child>
         <child>
-          <object class="GtkScrolledWindow">
+          <placeholder/>
+        </child>
+        <child type="tab">
+          <placeholder/>
+        </child>
+        <child>
+          <object class="GtkNotebook" id="body_notebook">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="shadow_type">in</property>
-            <child>
-              <object class="GtkSourceView" id="requestText">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="left_margin">2</property>
-                <property name="right_margin">2</property>
-                <property name="monospace">True</property>
-                <property name="show_line_numbers">True</property>
-                <property name="tab_width">2</property>
-                <property name="indent_width">2</property>
-                <property name="auto_indent">True</property>
-                <property name="insert_spaces_instead_of_tabs">True</property>
-              </object>
-            </child>
-          </object>
-          <packing>
-            <property name="position">1</property>
-          </packing>
-        </child>
-        <child type="tab">
-          <object class="GtkBox">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="tab_pos">bottom</property>
+            <property name="show_border">False</property>
+            <property name="scrollable">True</property>
             <child>
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Raw</property>
+                <property name="label" translatable="yes">No request body.</property>
+              </object>
+            </child>
+            <child type="tab">
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">None</property>
               </object>
               <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="position">0</property>
+                <property name="tab_fill">False</property>
               </packing>
             </child>
             <child>
-              <object class="GtkMenuButton">
+              <object class="GtkScrolledWindow">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="focus_on_click">False</property>
-                <property name="receives_default">True</property>
-                <property name="relief">none</property>
-                <property name="popover">requestTypePopover</property>
+                <property name="shadow_type">in</property>
                 <child>
-                  <object class="GtkImage">
+                  <object class="GtkSourceView" id="body_text">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="icon_name">go-up</property>
+                    <property name="can_focus">True</property>
+                    <property name="left_margin">2</property>
+                    <property name="right_margin">2</property>
+                    <property name="monospace">True</property>
+                    <property name="show_line_numbers">True</property>
+                    <property name="tab_width">2</property>
+                    <property name="indent_width">2</property>
+                    <property name="auto_indent">True</property>
+                    <property name="insert_spaces_instead_of_tabs">True</property>
                   </object>
                 </child>
               </object>
               <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
                 <property name="position">1</property>
               </packing>
             </child>
-          </object>
-          <packing>
-            <property name="position">1</property>
-            <property name="tab_fill">False</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkBox">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="orientation">vertical</property>
-            <child>
+            <child type="tab">
               <object class="GtkBox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="spacing">3</property>
                 <child>
-                  <object class="GtkButton">
-                    <property name="label" translatable="yes">Choose Files</property>
+                  <object class="GtkLabel">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">Raw</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -194,10 +153,20 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkLabel">
+                  <object class="GtkMenuButton">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">No files chosen.</property>
+                    <property name="can_focus">True</property>
+                    <property name="focus_on_click">False</property>
+                    <property name="receives_default">True</property>
+                    <property name="relief">none</property>
+                    <property name="popover">content_type_popover</property>
+                    <child>
+                      <object class="GtkImage">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="icon_name">go-up</property>
+                      </object>
+                    </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -207,14 +176,71 @@
                 </child>
               </object>
               <packing>
-                <property name="expand">False</property>
-                <property name="fill">True</property>
-                <property name="padding">3</property>
-                <property name="position">0</property>
+                <property name="position">1</property>
+                <property name="tab_fill">False</property>
               </packing>
             </child>
             <child>
-              <placeholder/>
+              <object class="GtkBox">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="GtkBox">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="spacing">3</property>
+                    <child>
+                      <object class="GtkButton">
+                        <property name="label" translatable="yes">Choose Files</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">No files chosen.</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="padding">3</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <placeholder/>
+                </child>
+              </object>
+              <packing>
+                <property name="position">2</property>
+              </packing>
+            </child>
+            <child type="tab">
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Binary</property>
+              </object>
+              <packing>
+                <property name="position">2</property>
+                <property name="tab_fill">False</property>
+              </packing>
             </child>
           </object>
           <packing>
@@ -225,7 +251,7 @@
           <object class="GtkLabel">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="label" translatable="yes">Binary</property>
+            <property name="label" translatable="yes">Body</property>
           </object>
           <packing>
             <property name="position">2</property>
@@ -234,20 +260,8 @@
         </child>
       </object>
       <packing>
-        <property name="position">2</property>
-        <property name="tab_fill">False</property>
+        <property name="index">-1</property>
       </packing>
     </child>
-    <child type="tab">
-      <object class="GtkLabel">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="label" translatable="yes">Body</property>
-      </object>
-      <packing>
-        <property name="position">2</property>
-        <property name="tab_fill">False</property>
-      </packing>
-    </child>
-  </object>
+  </template>
 </interface>
